crates/plotnik-tests/tests/03-analyze/empty_constructs/empty_tree_gates_name_resolution.txt
Q = (foo
  ()
  (Missing)
)
------------------ DIAGNOSTICS -------------------
error: empty `()` matches nothing
 --> query.ptk:2:3
  |
2 |   ()
  |   ^^
  |
help: use `(_)` to match any named node, or `_` for any node
------------------ DEFINITIONS -------------------
